--- a/_includes/left-sidebar.html
+++ b/_includes/left-sidebar.html
@@ -22,7 +22,7 @@
                     <span> {{ category[0]}} </span>
                     <span class="menu-arrow"></span>
                 </a>
-                <div class="collapse" id="sidebar{{ category[0] | slugify}}">
+                <div class="collapse" id="sidebar{{ category[0] }}">
                     <ul class="side-nav-second-level">
                     	{% assign pages_list = category[1] %}
 						{% for post in pages_list %}
