--- a/_includes/page-title.html
+++ b/_includes/page-title.html
@@ -4,8 +4,8 @@
             <div class="page-title-right">
                 <ol class="breadcrumb m-0">
                     <li class="breadcrumb-item"><a href="javascript: void(0);">Wikilabs</a></li>
-                    {% if page.category != empty %}
-                    <li class="breadcrumb-item"><a href="/{{ page.categories[0] }}">{{ page.categories[0] }}</a></li>
+                    {% if page.categories != empty %}
+                    <li class="breadcrumb-item"><a href="{{ site.url }}/category/{{ page.categories[0] | slugify }}/index.html">{{ page.categories[0] }}</a></li>
                     {% endif %}
                     <li class="breadcrumb-item active">{{ page.title }}</li>
                 </ol>
