--- a/_includes/page-title.html
+++ b/_includes/page-title.html
@@ -4,13 +4,13 @@
             <div class="page-title-right">
                 <ol class="breadcrumb m-0">
                     <li class="breadcrumb-item"><a href="javascript: void(0);">Wikilabs</a></li>
-                    {% if page.categories != empty %}
+                    {% if page.categories[0].size > 1 %}
                     <li class="breadcrumb-item"><a href="{{ site.url }}/category/{{ page.categories[0] | slugify }}/index.html">{{ page.categories[0] }}</a></li>
                     {% endif %}
                     <li class="breadcrumb-item active">{{ page.title }}</li>
                 </ol>
             </div>
-            <h4 class="page-title">{{ page.title }}</h4>
+<!--             <h4 class="page-title">{{ page.title }}</h4> -->
         </div>
     </div>
 </div>
