--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,8 @@
         <!-- END wrapper -->
 
         <!-- bundle -->
-        <script src="{{ '/public/js/vendor.min.js' | absolute_url }}"></script>
-        <script src="{{ '/public/js/app.min.js' | absolute_url }}"></script>
+        <script src="{{ 'public/js/vendor.min.js' | absolute_url }}"></script>
+        <script src="{{ 'public/js/app.min.js' | absolute_url }}"></script>
        
     </body>
 </html>
