--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <script>document.write(new Date().getFullYear())</script> © Etcware - wikilabs.org
+                <script>document.write(new Date().getFullYear())</script> © Etcware per Dopolavoro Matematico - wikilabs.org
             </div>
             <div class="col-md-6">
                 <div class="text-md-end footer-links d-none d-md-block">
