--- a/_includes/head-css.html
+++ b/_includes/head-css.html
@@ -1,3 +1,4 @@
 <!-- App css -->
 <link href="{{ 'public/css/icons.min.css' | absolute_url }}" rel="stylesheet" type="text/css" />
 <link href="{{ 'public/css/app.min.css' | absolute_url }}" rel="stylesheet" type="text/css" id="app-style"/>
+<link href="{{ 'public/css/fontawesome/all.min.css' | absolute_url }}" rel="stylesheet" type="text/css" id="app-style"/>
