--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,16 +2,16 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-6">
-                <script>document.write(new Date().getFullYear())</script> © Etcware per Dopolavoro Matematico - wikilabs.org
+            <div class="col-md-12">
+                <script>document.write(new Date().getFullYear())</script> - Tecnologia a cura di <a href="http://etcware.it">Etcware</a> per <a href="https://dopolavoromatematico.it">Dopolavoro Matematico</a>
             </div>
-            <div class="col-md-6">
-                <div class="text-md-end footer-links d-none d-md-block">
-                    <a href="javascript: void(0);">Chi siamo</a>
-                    <a href="javascript: void(0);">Supporto</a>
-                    <a href="javascript: void(0);">Contatti</a>
-                </div>
-            </div>
+<!--             <div class="col-md-6"> -->
+<!--                 <div class="text-md-end footer-links d-none d-md-block"> -->
+<!--                     <a href="javascript: void(0);">Etcware</a> -->
+<!--                     <a href="javascript: void(0);">Supporto</a> -->
+<!--                     <a href="javascript: void(0);">Contatti</a> -->
+<!--                 </div> -->
+<!--             </div> -->
         </div>
     </div>
 </footer>
