--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <script>document.write(new Date().getFullYear())</script> - Tecnologia a cura di <a href="http://etcware.it">Etcware</a> per <a href="https://dopolavoromatematico.it">Dopolavoro Matematico</a>
+                <script>document.write(new Date().getFullYear())</script> - Tech a cura di <a href="http://etcware.it">Etcware</a> per <a href="https://dopolavoromatematico.it">Dopolavoro Matematico</a>
             </div>
 <!--             <div class="col-md-6"> -->
 <!--                 <div class="text-md-end footer-links d-none d-md-block"> -->
