--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -5,13 +5,13 @@
         <i class="mdi mdi-menu"></i>
     </button>
     <div class="app-search dropdown float-end d-none d-lg-block">
-        <form>
-            <div class="input-group">
-                <input type="text" class="form-control dropdown-toggle"  placeholder="Search..." id="top-search">
-                <span class="mdi mdi-magnify search-icon"></span>
-                <button class="input-group-text btn-primary" type="submit">Search</button>
-            </div>
-        </form>
+<!--         <form> -->
+<!--             <div class="input-group"> -->
+<!--                 <input type="text" class="form-control dropdown-toggle"  placeholder="Search..." id="top-search"> -->
+<!--                 <span class="mdi mdi-magnify search-icon"></span> -->
+<!--                 <button class="input-group-text btn-primary" type="submit">Search</button> -->
+<!--             </div> -->
+<!--         </form> -->
     </div>
 </div>
 <!-- end Topbar -->
