--- a/_layouts/event_index.html
+++ b/_layouts/event_index.html
@@ -14,15 +14,28 @@ layout: default
     <h1>{{ page.title }}</h1>
   {% endif %}
 
-  <section>
-    <!-- Show post excerpts for the current page -->
-    {% for post in paginator.posts limit:paginator.per_page %}
-      <article>
-        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-        <h5>{{ post.date }}</h5>
-      </article>
-    {% endfor %}
-  </section>
+  <div class="container bcontent">
+	  {% for post in paginator.posts limit:paginator.per_page %}
+	  <a href="{{ post.url }}">
+	  <div class="card">
+	  	<div class="row no-gutters">
+	         <div class="col-sm-3">
+			{% if post.image %}
+	         	  <img src="{{ '/public/images/' | append: post.image | absolute_url }}" class="card-img" style="max-height:200px; width:auto" alt="...">
+	           {% endif %}          </div>
+	         <div class="col-sm-9">
+	             <div class="card-body">
+	                 <h4 class="card-title text-dark">{{ post.title }}</h4>
+	                 <p class="text-dark">{{ post.author }}</p>
+	                 <p class="text-black-50">{{ post.abstract }} ...</p>
+	                 
+	             </div>
+	         </div>
+	     	</div>
+	     </div>
+	  </a>
+	  {% endfor %}
+  </div>
   <!-- Show navigation next/previous page links if applicable -->
   <nav><p>
     {% if paginator.previous_page %}<a href="{{ paginator.previous_page_path }}"><span aria-hidden="true">&larr;</span> Newer</a>{% endif %}
