--- a/_includes/left-sidebar.html
+++ b/_includes/left-sidebar.html
@@ -2,13 +2,14 @@
 <div class="leftside-menu">
     
     <!-- LOGO -->
-    <a href="{{ site.url }}" class="logo text-center logo-light">
-        <span class="logo-lg">
-            <img src="{{ '/public/images/logo.png' | absolute_url }}" alt="" height="16">
+    <a href="{{ site.url }}" class="logo text-center text-white logo-light">
+        <span class="logo-lg mt-3">
+            <h4><img src="{{ '/public/images/logo.png' | absolute_url }}" alt="" height="35">WIKILABS</h4>
         </span>
         <span class="logo-sm">
-            <img src="{{ '/public/images/logo.png' | absolute_url }}" alt="" height="16">
+            <img src="{{ '/public/images/logo.png' | absolute_url }}" alt="" height="25">
         </span>
+        
     </a>
    
     <div class="h-100" id="leftside-menu-container" data-simplebar>
