--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,11 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <script>document.write(new Date().getFullYear())</script> - Tech a cura di <a href="http://etcware.it">Etcware</a> per <a href="https://dopolavoromatematico.it">Dopolavoro Matematico</a>
+            </div>
+            <div class="col-md-6">
+            	<a href="https://www.flaticon.com/free-icons/wiki" title="wiki icons">Wiki icons created by Freepik - Flaticon</a>
             </div>
 <!--             <div class="col-md-6"> -->
 <!--                 <div class="text-md-end footer-links d-none d-md-block"> -->
